--- a/SIMS.WebApp/appsettings.json
+++ b/SIMS.WebApp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=WINDOWS-7R0K5VR\\SQLEXPRESS01;Database=SIMS_Db;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=DESKTOP-PE11OVA;Database=SIMS_Db;Trusted_Connection=True;TrustServerCertificate=True;",
     "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SIMS.WebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
